animation/flickering fixed on divHoverNavBarF's border, added icon in <ancor> on footer for go smootly on the top

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,7 @@ header {
   width: 100%;
   margin-left: auto;
   margin-right: auto;
-  padding-top: 1.8vh; /*CREDO SIA NECESSARIO PER DISTANZIARE IL TOP DEL BODY, A CAUSA DEL POSITION FIXED O DEL FLOW NELL'HEADER*/
+  padding-top: 1.5vh; /*CREDO SIA NECESSARIO PER DISTANZIARE IL TOP DEL BODY, A CAUSA DEL POSITION FIXED O DEL FLOW NELL'HEADER*/
   padding-bottom: 5vh; /*MESSO SOLO PER NON FAR SFORARE BORDO A SX DI LENTE DURANTE LO SCORRIMENTO,
                         DA ACCORCIARE QUEL BORDO*/
 }
@@ -68,28 +68,27 @@ a {
   position: absolute;
 }
 .divHoverNavBarF {
-  background-color: aqua;
-  padding: 6vh;
-  width: 800%;
+  background-color: rgb(217, 239, 255);
+  padding: 1%;
+  width: 70%;
   position: absolute;
-  top: 32.5vh; /*CENTRA I DIV CHE APPAIONO SOTTO ANCORE*/
+  top: 700%; /*CENTRA I DIV CHE APPAIONO SOTTO ANCORE*/
   left: 50%; /*   ""                            ""   */
   transform: translate(-50%, -50%); /*   ""                            ""   */
   z-index: 2;
+  border-radius: 20px;
 }
 .divHoverNavBarF > img {
-  padding: 1.7vh;
-  max-width: 200%;
+  padding: 1%;
+  width: 13%;
+
   z-index: 3;
-  position: relative;
 }
 .aNavFissa {
   padding: 1rem;
   font-family: "Aldrich", sans-serif;
   font-weight: bold;
   transition: 0.6s ease-in-out;
-  position: relative;
-  text-align: center;
 }
 .aNavFissa:hover {
   font-size: 105%;
@@ -107,14 +106,13 @@ a {
   font-size: 110%;
 }
 main {
-  margin-top: 12vh;
-  padding-top: 4%;
+  padding-top: 9.3%;
   margin-bottom: 1.3vh;
   margin-left: 1.8vh;
   margin-right: 1.8vh;
 }
 section {
-  margin-bottom: 5.5vh;
+  margin-bottom: 3.2vh;
   margin-top: 2.5vh;
 }
 
@@ -142,26 +140,27 @@ section > article > a:hover {
   box-shadow: 17px 18px 27px -11px rgba(0, 0, 0, 0.5);
 }
 
-/* .parallax {
-  background-attachment: fixed;
+/* .parallax { */
+/* /* background-attachment: fixed;
   background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-} */
-
-.broImg2Main,
-.img2Main {
+  background-repeat: no-repeat; */
+/* background-size: cover; */
+/* } */
+.sect2Main {
   width: 50%;
-  min-width: 120px;
-  max-width: 1200px;
   display: inline-block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 1vh;
+  max-width: 100%;
+  background-color: rgb(229, 243, 255);
+  padding-top: 2%;
+  padding-bottom: 2%;
 }
 .img2Main {
-  width: 100%;
   box-shadow: 17px 18px 27px -11px rgba(0, 0, 0, 0.4);
+  min-width: 120px;
+  max-width: 100%;
+}
+.pImg2Main {
+  max-width: 90%;
 }
 footer {
   background-color: black;
@@ -172,7 +171,7 @@ footer > div {
   padding-bottom: 4vh;
   width: 100%;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 150%;
@@ -187,6 +186,17 @@ footer > div > ul h6 {
 .aFooter {
   font-size: 60%;
   align-items: center;
+}
+.fa-arrow-up {
+  color: aliceblue;
+  background-color: rgb(0, 0, 0);
+  font-size: 180%;
+  border: rgb(255, 255, 255) solid 2px;
+  padding: 10px;
+  border-radius: 18px;
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
 }
 /* @media screen and (min-width: 576x) {
   h1 {
